<!--
  ~ Copyright 2020 Lukáš Anda. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">AIS Mobile</string>
    <string name="login">Prihlásiť sa</string>

    <string name="network_error">Chyba, prosím skontrolujte pripojenie na internet a skúste zopakovať akciu neskôr</string>
    <string name="next_lesson">Nasledujúca hodina</string>
    <string name="no_classes">Na tento deň nie je\nžiadna rozvrhová akcia</string>
    <string name="no_course">Nie sú dostupné žiadne dáta o predmetoch</string>
    <string-array name="days">
        <item>Pondelok</item>
        <item>Utorok</item>
        <item>Streda</item>
        <item>Štvrtok</item>
        <item>Piatok</item>
        <item>Sobota</item>
        <item>Nedeľa</item>
    </string-array>
    <string name="press_twice_exit">Stlačte tlačidlo späť ešte raz na ukončenie</string>
    <string name="notification_title">AIS mobile</string>
    <string name="notification_subtitle">Prebieha aktualizácia</string>
    <string name="no_subjects">Žiadne predmety pre zvolený semester</string>
    <string name="action__send">Odoslať</string>
    <string name="course_presence">Účasť na prednáške:</string>
    <string name="seminar_presence">Účasť na cvičení:</string>
    <string name="settings">Nastavenia</string>
    <string name="people_at_stu">Ľudia na STU</string>
    <string name="logout">Odhlásiť sa</string>

    <string name="downloading_timetable">Sťahujem rozvrh…</string>
    <string name="downloading_emails">Sťahujem e-maily…</string>
    <string name="downloading_profile">Sťahujem profil…</string>
    <string name="downloading_courses">Sťahujem informácie o predmetoch a dokumentoch…</string>
    <string name="downloading_complete">Hotovo!</string>
    <string name="wifi_username">Wifi meno:</string>
    <string name="no_data">-</string>
    <string name="wifi_password">Wifi heslo:</string>
    <string name="name">Meno</string>
    <string name="password">Heslo</string>
    <string name="logout_title">Naozaj sa chcete odhlásiť?</string>
    <string name="logout_description">Po odhlásení sa zo zariadenia odstránia všetky stiahnuté údaje a bude umožnené sa prihlásiť na iný účet.</string>
    <string name="_cancel">Zrušiť</string>
    <string name="new_document">Bol stiahnutý nový dokument</string>
    <string name="new_document_description">Tento doukument nájdete na nasledujúcej ceste: %s kde ho môžete neskôr otvoriť pomocou systémovej aplikácie.\nŽeláte si tento dokument otvoriť teraz?</string>
    <string name="open_document">Otvoriť dokument</string>
    <string name="document_failed">Nepodarilo sa stiahnuť dokument.</string>
    <string name="document_failed_description">Nastal pravdepodobne problém so sieťou. Skúste to prosím znova neskôr.</string>
    <string name="_ok">OK</string>
    <string name="emails">Emaily</string>
    <string name="documents">Dokumenty</string>
    <plurals name="new_emails_notficiation">
        <item quantity="zero">V schránke je %d neprečítaných emailov</item>
        <item quantity="one">V schránke je %d neprečítaný email</item>
        <item quantity="two">V schránke sú %d neprečítané emaily</item>
        <item quantity="few">V schránke sú %d neprečítané emaily</item>
        <item quantity="other">V schránke je %d neprečítaných emailov</item>
    </plurals>
    <string name="new_timetable">K dispozícii je nový rozvrh</string>
    <string name="attachments">Prílohy</string>

    <string name="settings_general">Všeobecné</string>
    <string name="settings_theme">Téma</string>
    <string name="settings_sync">Synchronizácia</string>
    <string name="settings_update_time">Aktualizácia dát</string>
    <string name="settings_update_time_hint">Čas (v minútach) medzi jednotlivými aktualizáciami, čím väčší, tým viac sa šetrí baterka</string>
    <string name="settings_information">Informácie</string>
    <string name="settings_app_version">Verzia aplikácie</string>

    <string name="rate_app_title">Ohodnoť prosím túto aplikáciu</string>
    <string name="rate_app_subtitle">Ahoj, veľmi by mi pomohlo keby ohodnotíš túto aplikáciu na Google Play. Tvoj feedback sa tak rýchlejšie dostane ku mne a aj ostatní budú vedieť prečo je táto aplikácia taká super. Ďakujem :)</string>
    <string name="rate_app_yes">Ohodnotiť teraz</string>
    <string name="rate_app_no">Nie ďakujem</string>
    <string name="rate_app_remind">Pripomeň mi neskôr</string>

    <string-array name="theme_entries">
        <item>Denná</item>
        <item>Nočná</item>
        <item>Automaticky podľa systému</item>
        <item>Batéria</item>
    </string-array>

    <string-array name="theme_entry_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="profile_name">Meno:</string>
    <string name="profile_id">AIS ID:</string>
    <string name="profile_email">Email:</string>

    <string name="back">Späť</string>
    <string name="settings_contact">Kontakt</string>
    <string name="settings_email_contact">Napísať e-mail</string>
    <string name="my_mail">lukas.anda@gmail.com</string>
</resources>
