<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Lukáš Anda. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/settings_general">
        <ListPreference
            app:defaultValue="0"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_entry_values"
            app:icon="@drawable/ic_theme"
            app:key="theme"
            app:summary="%s"
            app:title="@string/settings_theme" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_sync">
        <SeekBarPreference
            android:max="60"
            app:defaultValue="1"
            app:icon="@drawable/ic_sync"
            app:key="update_interval"
            app:min="1"
            app:showSeekBarValue="true"
            app:summary="@string/settings_update_time_hint"
            app:title="@string/settings_update_time" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_information">
        <Preference
            android:title="@string/settings_app_version"
            app:icon="@drawable/ic_info"
            app:key="version" />

        <Preference
            android:title="@string/settings_email_contact"
            app:icon="@drawable/ic_email"
            app:key="email"
            app:summary="@string/my_mail" />
    </PreferenceCategory>
</PreferenceScreen>